<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="@android:color/white"/>
    <item
        android:id="@+id/action_toggle_layout"
        android:icon="@drawable/ic_view_grid"
        android:title="@string/action_toggle_layout"
        app:iconTint="@android:color/white"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sync_config"
        android:title="@string/action_sync_config_title"
        android:icon="@drawable/ic_sync_config"
        app:showAsAction="ifRoom"
        app:iconTint="@android:color/white" />
    <item
        android:id="@+id/action_sync_now"
        android:orderInCategory="100"
        android:title="@string/pref_sync_now_title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/action_export"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_import"
        android:orderInCategory="100"
        android:title="@string/action_import"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
